# OpenEarth

./: .gitignore  .gitmodules  README.md  build.gradle  settings.gradle
openearthsdk/: CMakeLists.txt  build.gradle  glm.cmake
openearthsdk/cmake/: glm.cmake
openearthsdk/src/androidTest/java/com/geocompass/openearth/sdk/: ExampleInstrumentedTest.java
openearthsdk/src/main/: AndroidManifest.xml
openearthsdk/src/main/cpp/: jni.cpp  jni.hpp  logging.hpp  main.cpp  native_earth_view.cpp  native_earth_view.hpp  util.cpp  util.hpp
openearthsdk/src/main/cpp/earth/: Sphere.cpp  Sphere.hpp  TileManager.cpp  TileManager.hpp  constants.hpp  earth.cpp  earth.hpp  earth_renderer.cpp  earth_renderer.hpp  opengl_project.cpp  opengl_project.hpp  tile.cpp  tile.hpp  tile_management.cpp  tile_management.hpp  transform.cpp  transform.hpp
openearthsdk/src/main/cpp/earth/feature/: feature.cpp  feature.hpp  line_feature.cpp  line_feature.hpp  point_feature.cpp  point_feature.hpp  polygon_feature.cpp  polygon_feature.hpp
openearthsdk/src/main/cpp/earth/geometry/: bounds.cpp  bounds.hpp  geometry.cpp  geometry.hpp  geometry_util.cpp  geometry_util.hpp  latlng.cpp  latlng.hpp  line.cpp  line.hpp  point.cpp  point.hpp  polygon.cpp  polygon.hpp  ray.cpp  ray.hpp
openearthsdk/src/main/cpp/earth/geometry/turf/: turf.cpp  turf.hpp
openearthsdk/src/main/cpp/earth/geometry/util/: envelope.cpp  envelope.hpp  math_util.cpp  math_util.hpp  sphere_util.cpp  sphere_util.hpp
openearthsdk/src/main/cpp/earth/layer/: VectorLayer.cpp  VectorLayer.h  layer.cpp  layer.hpp  line_layer.cpp  line_layer.hpp  point_layer.cpp  point_layer.hpp  polygon_layer.cpp  polygon_layer.hpp  raster_layer.cpp  raster_layer.hpp  vector_layer.cpp  vector_layer.h  vector_layer.hpp
openearthsdk/src/main/cpp/earth/source/: source.cpp  source.hpp
openearthsdk/src/main/cpp/earth/style/: line_style.cpp  line_style.hpp  point_style.hpp  polygon_style.hpp  style.cpp  style.hpp
openearthsdk/src/main/cpp/earth/tile/: TileData.cpp  tile_cache.cpp  tile_cache.hpp  tile_data.cpp  tile_data.hpp  tile_id.cpp  tile_id.hpp
openearthsdk/src/main/cpp/gl/: gl.cpp  gl.hpp
openearthsdk/src/main/cpp/programs/: program.cpp  program.hpp
openearthsdk/src/main/cpp/shaders/: fill_shader.cpp  fill_shader.hpp  light_raster_shader.cpp  light_raster_shader.hpp  line_shader.cpp  line_shader.hpp  point_shader.cpp  point_shader.hpp  raster_shader.cpp  raster_shader.hpp  shader.cpp  shader.hpp
openearthsdk/src/main/cpp/source/: http_data_source.cpp  http_data_source.hpp
openearthsdk/src/main/cpp/sqlite/: sqlite3pp.h
openearthsdk/src/main/cpp/storage/: DatabaseDataSource.cpp  DatabaseDataSource.hpp  Respone.hpp  data_source.cpp  data_source.hpp  database_data_source.cpp  database_data_source.hpp  http_data_source.cpp  http_data_source.hpp  mbtile_data_source.cpp  mbtile_data_source.hpp  mbtile_info.cpp  mbtile_info.hpp
openearthsdk/src/main/cpp/texture/: texture.cpp  texture.hpp
openearthsdk/src/main/cpp/util/: assets_file_reader.cpp  assets_file_reader.hpp  image.c  image.cpp  image.h  image.hpp  jpeg_reader.c  jpeg_reader.cpp  jpeg_reader.h  looper.cpp  looper.hpp  png_reader.c  png_reader.h  point.hpp  thread_local.cpp  thread_local.hpp  token.hpp  url.cpp  url.hpp  util.cpp  util.hpp
openearthsdk/src/main/java/android/util/: MathUtils.java
openearthsdk/src/main/java/com/almeros/android/multitouch/: MoveGestureDetector.java
openearthsdk/src/main/java/com/geocompass/openearth/sdk/: OpenEarth.java
openearthsdk/src/main/java/com/geocompass/openearth/sdk/earth/: EGLConfigChooser.java  Earth.java  EarthOptions.java  EarthRenderer.java  EarthView.java  GestureDetector.java  NativeEarthView.java
openearthsdk/src/main/java/com/geocompass/openearth/sdk/earth/exception/: EGLConfigException.java
openearthsdk/src/main/java/com/geocompass/openearth/sdk/earth/geometry/: LatLng.java
openearthsdk/src/main/java/com/geocompass/openearth/sdk/http/: HttpRequest.java
openearthsdk/src/main/res/layout/: earth_view.xml
openearthsdk/src/main/res/values/: strings.xml
openearthsdk/src/test/java/com/geocompass/openearth/sdk/: ExampleUnitTest.java
openearthsdk/src/test/java/com/geocompass/openearth/sdk/earth/: EarthRendererTest.java
(+14 files in other folders)
